Fixes double scrollbar issue in browserframes (#11780) Fixed by adding font-size 0 to the base theme.

--- a/WebContent/VAADIN/themes/base/base.scss
+++ b/WebContent/VAADIN/themes/base/base.scss
@@ -39,6 +39,7 @@
 @import "widget/widget.scss";
 @import "window/window.scss";
 @import "debug/debug.scss";
+@import "browserframe/browserframe.scss";
 
 .v-vaadin-version:after {
 	content: "@version@";
@@ -64,6 +65,7 @@ $line-height: normal;
 	
 	@include base-absolutelayout;
 	@include base-accordion;
+	@include base-browserframe;
 	@include base-button;
 	@include base-nativebutton;
 	@include base-checkbox;
